@@ -61,8 +61,8 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 	</target>
 
 	<target name="compile" description="Compile sources." depends="generate">
-		<javac source="${java.src.version}" srcdir="${java.src}" destdir="${out}" classpathref="build-classpath" includeAntRuntime="false" debug="true"/>
 		<javac source="${java.src.version}" srcdir="${grammar.out}" destdir="${out}" classpathref="build-classpath" includeAntRuntime="false" debug="true"/>
+		<javac source="${java.src.version}" srcdir="${java.src}" destdir="${out}" classpathref="build-classpath" includeAntRuntime="false" debug="true"/>
 		<javac source="${java.src.version}" srcdir="${java.test.src}" destdir="${java.test.out}" classpathref="build-classpath" includeAntRuntime="false" debug="true"/>
 	</target>
 
