@@ -1,4 +1,8 @@
 
+21/12/2010 Changes
+
+Added delegation to Interpreter to interpret source code. Added Tests around delegation.
+
 20/12/2010 Changes
 
 Added stic.bat supplied by Jeff Heon. Adapted from Kasim's ClojureW Project (https://bitbucket.org/kasim/clojurew)
